Styling changes. alignment of upper buttons/input fields fixed.

--- a/frontend/src/app/reports/reports.css
+++ b/frontend/src/app/reports/reports.css
@@ -76,11 +76,6 @@ th {
   font-size: 14px;
 }
 
-.reports-table .mat-header-cell {
-  justify-content: center;
-  text-align: center;
-}
-
 td {
   font-size: 14px;
 }
@@ -107,6 +102,7 @@ td {
   align-items: center;
   gap: 16px;
   margin-bottom: 32px;
+  margin: 0 auto;
 }
 
 .search-buttons {
@@ -132,3 +128,15 @@ td {
   border-color: var(--button-bg);
   box-shadow: 0 0 0 3px rgba(31, 78, 121, 0.15);
 }
+
+.report-filters{
+    width: 100%;
+    max-width: 700px;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    margin-bottom: 32px;
+    margin: 0 auto;
+    justify-content: center;
+}
+
